--- a/client/web/static/i18n/en.json
+++ b/client/web/static/i18n/en.json
@@ -12,7 +12,7 @@
     "copy_usb_read_attrs": "Reading metadata",
     "copy_usb_tar_start": "Intermediary copy from input device",
     "copyerr": "Error while copying : ",
-    "cpsrverror": "Server error while transfering",
+    "cpsrverror": "Server error while transferring",
     "date": "Date",
     "destfsfmt": "Output device filesystem &nbsp;",
     "devicetoosmall": "Error: destination device is too small",
@@ -46,7 +46,7 @@
     "fmt2time": "duration: between 5 and 20 minutes (depending on the device size)",
     "fmt2title": "Secure format",
     "formatend": "Formatting done",
-    "formaterr": "Error formating",
+    "formaterr": "Error formatting",
     "formatting": "Formatting, please wait...",
     "imaging": "Imaging disk...",
     "imgend": "Disk image done",
