--- a/client/web/static/i18n/en.json
+++ b/client/web/static/i18n/en.json
@@ -80,5 +80,10 @@
     "usb-dest-descr": "Plug a USB device (which will be erased)",
     "usb-dev": "USB device",
     "warn-empty-select": "Please select input device and destination",
-    "warn4gb": "(files larger than 4GB aren't supported)"
+    "warn4gb": "(files larger than 4GB aren't supported)",
+    "export-details": "Export to a USB device",
+    "pin-prompt": "Enter export PIN code",
+    "pin-ok": "OK",
+    "pin-clear": "Clear",
+    "pin-missing": "Missing PIN"
 }
