--- a/client/web/static/i18n/fr.json
+++ b/client/web/static/i18n/fr.json
@@ -74,7 +74,7 @@
     "startcopy": "Lancer la copie",
     "title": "SASUSB",
     "tools": "Outils",
-    "transferdone": "Transfer terminé",
+    "transferdone": "Transfert terminé",
     "trfail": "Le transfert a échoué: ",
     "usb-copy": "Copie USB",
     "usb-dest-descr": "Insérez un périphérique USB (qui sera effacé)",
