client: show sysinfo in UI

--- a/usbsas-client/resources/i18n/en.json
+++ b/usbsas-client/resources/i18n/en.json
@@ -54,6 +54,8 @@
     "disk_img": "Reading device",
     "diskimg": "Disk image",
     "diskimg_desc": "Save an image disk of the device (for debugging, analysis etc.)",
+    "sysinfo": "System informations",
+    "sys": "System",
     "tools": "Tools",
     "usbsas": "usbsas",
     "loading": "Loading"
