--- a/usbsas-client/resources/i18n/en.json
+++ b/usbsas-client/resources/i18n/en.json
@@ -23,7 +23,7 @@
     "write_dst": "Writing filesystem on destination device",
     "mk_fs": "Creating filesystem",
     "all_done": "Transfer done",
-    "transfering": "Transfer status",
+    "transferring": "Transfer status",
     "idreq": "Please identify yourself",
     "src_files": "Files on source device",
     "selected_files": "Selected files",
@@ -54,7 +54,7 @@
     "disk_img": "Reading device",
     "diskimg": "Disk image",
     "diskimg_desc": "Save an image disk of the device (for debugging, analysis etc.)",
-    "sysinfo": "System informations",
+    "sysinfo": "System information",
     "sys": "System",
     "tools": "Tools",
     "usbsas": "usbsas",
